# simplseq-app

./: .gitattributes  .gitignore  LOCAL_APP_USER_GUIDE.md  README.md  environment.yml  install-simplseq.sh  main.nf  nextflow.config  pyproject.toml
.github/workflows/: installer-smoke.yml  release.yml
examples/: README.md
gui/: flask_app.py  streamlit_app.py
gui/backend/simplseq_gui/: __init__.py  local_runner.py  operator.py
gui/static/css/: app.css
gui/static/js/: app.js
gui/templates/: index.html
locks/: README.md  linux-64-explicit.txt
reference/: amplicons_noprimers.fasta  snv_filters.txt
scripts/: build_release.sh
src/simplseq/: __init__.py  cli.py  job_state.py  resources.py  runner.py  samplesheet.py
tests/: test_flask_status.py  test_folder_picker.py  test_frontend_regressions.py  test_runner.py  test_samplesheet.py
tests/fixtures/: README.md
workflow/primers/: overlap_pr1.fa  overlap_pr2.fa  primers_fwd.fa  primers_rev.fa
workflow/scripts/: ASV_to_CIGAR.py  AmpliconPipeline.py
